# prong

./: .clang-format  .dockerignore  .mise.toml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  hk.pkl
.claude/commands/: create-issue.md  next-issue.md  take-issue.md
.github/workflows/: build.yml
cmake/: prongConfig.cmake.in
docs/: architecture.md  best_practices.md  component_builder.md  coordinate_system.md  docker.md  layouts.md
docs/api/: QUICK_REFERENCE.md  README.md
docs/api/core/: Component.md
examples/: CMakeLists.txt  README.md  component_builder_example.cpp
examples/adapters/: font_renderer.h  glfw_window_adapter.h  simple_opengl_renderer.h  stb_impl.cpp
examples/advanced/01_custom_component/: CMakeLists.txt  README.md  main.cpp
examples/advanced/02_custom_layout/: CMakeLists.txt  README.md  main.cpp
examples/advanced/03_custom_renderer/: CMakeLists.txt  README.md  main.cpp
examples/advanced/04_performance/: CMakeLists.txt  README.md  main.cpp
examples/basic/01_hello_button/: CMakeLists.txt  README.md  main.cpp
examples/basic/02_stack_layout/: CMakeLists.txt  README.md  main.cpp
examples/basic/03_flex_layout/: CMakeLists.txt  README.md  main.cpp
examples/basic/04_grid_layout/: CMakeLists.txt  README.md  main.cpp
examples/basic/05_dock_layout/: CMakeLists.txt  README.md  main.cpp
examples/basic/06_flow_layout/: CMakeLists.txt  README.md  main.cpp
examples/basic/07_text_input/: CMakeLists.txt  README.md  main.cpp
examples/basic/08_list_box/: CMakeLists.txt  README.md  main.cpp
examples/common/glfw_adapters/: glfw_adapters.h  glfw_clipboard.h  glfw_keyboard.cpp  glfw_keyboard.h
examples/demo_app/: main.cpp
examples/demo_app/scenes/: demo_scene.h
examples/simple_app/: main.cpp
include/bombfork/prong/components/: button.h  dialog.h  list_box.h  panel.h  text_input.h  toolbar.h  viewport.h
include/bombfork/prong/core/: async_callback_queue.h  component.h  component_builder.h  component_traits.h  coordinate_system.h  event.h  scene.h
include/bombfork/prong/events/: event_dispatcher.h  iclipboard.h  ikeyboard.h  iwindow.h
include/bombfork/prong/generic/: context_menu.h  dialog.h  slider.h  toolbar.h  viewport.h
include/bombfork/prong/layout/: dock_layout.h  flex_layout.h  flow_layout.h  grid_layout.h  layout_constraints.h  layout_manager.h  layout_measurement.h  no_layout.h  stack_layout.h
include/bombfork/prong/rendering/: irenderer.h
include/bombfork/prong/theming/: advanced_theme.h  color.h  theme_manager.h
mise-tasks/: docker-build  docker-build-examples  docker-build-lib  docker-build-tests  docker-format  docker-shell  docker-test
src/core/: async_callback_queue.cpp  component.cpp  coordinate_system.cpp
src/events/: event_dispatcher.cpp
src/generic/: dialog.cpp  toolbar.cpp  viewport.cpp
src/theming/: theme_manager.cpp
tests/: CMakeLists.txt  README.md  test_axis_resize.cpp  test_button.cpp  test_color.cpp  test_component.cpp  test_component_builder.cpp  test_component_coordinates.cpp  test_component_resize.cpp  test_coordinate_system.cpp  test_event_api.cpp  test_event_dispatcher.cpp  test_flex_layout_autogrow.cpp  test_layout_minimum_sizes.cpp  test_layout_regression.cpp  test_list_box.cpp  test_minimum_sizes.cpp  test_resize_shrink.cpp  test_scene.cpp  test_text_input.cpp
tests/mocks/: mock_clipboard.h  mock_keyboard.h  mock_renderer.h
